# CorrectedNormalCurrent

./: .gitmodules  CMakeLists.txt  CorrectedNormalCurrentFormula.h  CorrectedNormalCurrentFormulaEigen.h  NormalCycleFormula.h  README.md  RusinkiewiczCurvatureFormula.h  cgalTest.cpp  simpleTest.cpp
.github/workflows/: ccpp.yml
